Fix layout problem with screen reader visible rows
Make sure padding is also set to zero.

--- a/mixins.less
+++ b/mixins.less
@@ -18,16 +18,16 @@
 **    TABLE OF CONTENTS:
 **    ───────────────────────────────────────────────────────────────────────────────────────────
 **      OUE-MIXINS §1: Semantic visibility control.............................................34
-**      OUE-MIXINS §2: Element sizing..........................................................56
-**      OUE-MIXINS §3: Positioning.............................................................78
-**      OUE-MIXINS §4: Spacing................................................................104
-**      OUE-MIXINS §5: Padding................................................................213
-**      OUE-MIXINS §6: Typography.............................................................320
-**      OUE-MIXINS §7: Borders................................................................349
-**      OUE-MIXINS §8: More typography........................................................414
-**      OUE-MIXINS §9: Semantic mixins for responsive layouts.................................526
-**      OUE-MIXINS §10: Iteratively specified CSS declarations................................541
-**      OUE-MIXINS §11: Interpolated style declarations.......................................706
+**      OUE-MIXINS §2: Element sizing..........................................................58
+**      OUE-MIXINS §3: Positioning.............................................................80
+**      OUE-MIXINS §4: Spacing................................................................106
+**      OUE-MIXINS §5: Padding................................................................215
+**      OUE-MIXINS §6: Typography.............................................................322
+**      OUE-MIXINS §7: Borders................................................................351
+**      OUE-MIXINS §8: More typography........................................................416
+**      OUE-MIXINS §9: Semantic mixins for responsive layouts.................................528
+**      OUE-MIXINS §10: Iteratively specified CSS declarations................................543
+**      OUE-MIXINS §11: Interpolated style declarations.......................................708
 */
 
 /*    ----------------------------------------------------------------------------------------------
@@ -46,8 +46,10 @@
 	border: 0 !important;
 	overflow: hidden !important;
 	opacity: 0 !important;
+
 	&.row {
 		margin: 0 !important;
+		padding: 0 !important;
 	}
 }
 
